big cars & new cars & companies was added

--- a/src/car-rental.html
+++ b/src/car-rental.html
@@ -43,5 +43,138 @@
         </div>
         <h1>All Type of Cars</h1>
     </div>
+    <h1 class="mt-36 text-5xl text-center text-crimson-100 font-semibold">Big Cars</h1>
+    <div class="group mt-12 mb-20 flex items-center w-full h-28 overflow-scroll overflow-x-hidden overflow-y-hidden">
+        <div class="ml-12 flex justify-around items-center min-w-[1200px] h-full animate-toLeft group-hover:[animation-play-state:paused]">
+            <div class="flex flex-row justify-around items-center w-1/4 h-full border-solid rounded-xl bg-stone-200 p-5">
+                <img src="../images/car-1.png" class="w-2/5 h-4/5">
+                <h2 class="text-2xl w-2/5 h-4/5">Lorem ipsum</h2>
+            </div>
+            <div class="flex flex-row justify-around items-center w-1/4 h-full border-solid rounded-xl bg-stone-200 p-5">
+                <img src="../images/car-2.png" class="w-2/5 h-4/5">
+                <h2 class="text-2xl w-2/5 h-4/5">Lorem ipsum</h2>
+            </div>
+            <div class="flex flex-row justify-around items-center w-1/4 h-full border-solid rounded-xl bg-stone-200 p-5">
+                <img src="../images/car-3.png" class="w-2/5 h-4/5">
+                <h2 class="text-2xl w-2/5 h-4/5">Lorem ipsum</h2>
+            </div>
+        </div>
+        <div class="flex justify-around items-center min-w-[1200px] h-full animate-toLeft group-hover:[animation-play-state:paused]">
+            <div class="flex flex-row justify-around items-center w-1/4 h-full border-solid rounded-xl bg-stone-200 p-5">
+                <img src="../images/car-4.png" class="w-2/5 h-4/5">
+                <h2 class="text-2xl w-2/5 h-4/5">Lorem ipsum</h2>
+            </div>
+            <div class="flex flex-row justify-around items-center w-1/4 h-full border-solid rounded-xl bg-stone-200 p-5">
+                <img src="../images/car-5.png" class="w-2/5 h-4/5">
+                <h2 class="text-2xl w-2/5 h-4/5">Lorem ipsum</h2>
+            </div>
+            <div class="flex flex-row justify-around items-center w-1/4 h-full border-solid rounded-xl bg-stone-200 p-5">
+                <img src="../images/car-6.png" class="w-2/5 h-4/5">
+                <h2 class="text-2xl w-2/5 h-4/5">Lorem ipsum</h2>
+            </div>
+        </div>
+        <div class="flex justify-around items-center min-w-[1200px] h-full animate-toLeft group-hover:[animation-play-state:paused]">
+            <div class="flex flex-row justify-around items-center w-1/4 h-full border-solid rounded-xl bg-stone-200 p-5">
+                <img src="../images/car-1.png" class="w-2/5 h-4/5">
+                <h2 class="text-2xl w-2/5 h-4/5">Lorem ipsum</h2>
+            </div>
+            <div class="flex flex-row justify-around items-center w-1/4 h-full border-solid rounded-xl bg-stone-200 p-5">
+                <img src="../images/car-2.png" class="w-2/5 h-4/5">
+                <h2 class="text-2xl w-2/5 h-4/5">Lorem ipsum</h2>
+            </div>
+            <div class="flex flex-row justify-around items-center w-1/4 h-full border-solid rounded-xl bg-stone-200 p-5">
+                <img src="../images/car-3.png" class="w-2/5 h-4/5">
+                <h2 class="text-2xl w-2/5 h-4/5">Lorem ipsum</h2>
+            </div>
+        </div>
+    </div>
+    <div class="new_cars mt-7">
+        <div class="title font-semibold text-5xl mt-28 mb-5 text-center text-crimson-100">New cars</div>
+        <div class="p-8 cards grid lg:grid-cols-3 md:grid-cols-2 gap-5">
+            <a href="#" class="card hover:scale-105 transition duration-200">
+                <div class="image h-full w-full"><img src="../images/2021-Lamborghini-Huracan-STO.jpg" class="h-full w-full object-cover rounded-b-md"></div>
+                <div class="title rounded-b-md">
+                    <p class="main-title text-lg font-bold text-white">Lamborghini Huracán STO</p>
+                </div>
+                <div class="badge">
+                    <span class="icon"><i class="fas fa-car"></i></span>
+                    <span class="text">Natural</span>
+                </div>
+            </a>
+            <a href="#" class="card hover:scale-105 transition duration-200">
+                <div class="image h-full w-full"><img src="../images/Lamborghini-Lanzador-Drive-Featured-Gear.webp" class="h-full w-full object-cover rounded-b-md"></div>
+                <div class="title rounded-b-md">
+                    <p class="main-title text-lg font-bold text-white">Lamborghini Lanzador EV</p>
+                </div>
+                <div class="badge">
+                    <span class="icon"><i class="fas fa-car-side"></i></span>
+                    <span class="text">Tank</span>
+                </div>
+            </a>
+            <a href="#" class="card hover:scale-105 transition duration-200">
+                <div class="image h-full w-full"><img src="../images/slider_image_1_r2.png" class="h-full w-full object-cover rounded-b-md"></div>
+                <div class="title rounded-b-md">
+                    <p class="main-title text-lg font-bold text-white">Bugatti Chiron</p>
+                </div>
+                <div class="badge">
+                    <span class="icon"><i class="fas fa-car"></i></span>
+                    <span class="text">Natural</span>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="logos mt-12 mb-10 p-10">
+        <div class="py-5 mb-8 title font-bold text-crimson-100 text-4xl text-center">Companies</div>
+        <div class="cards grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-10">
+            <div class="card hover:scale-105 transition duration-200 rounded-sm">
+                <div class="pb-11 logo h-full w-full"><img src="../images/BMW.png" class="h-full w-full"></div>
+                <div class="Company_name absolute bottom-0 bg-gray-700 bg-opacity-30 w-full py-1 px-2">
+                    <div class="main-title font-bold text-3xl text-gray-800 text-center">BMW</div>
+                </div>
+            </div>
+            <div class="card hover:scale-105 transition duration-200 rounded-sm">
+                <div class="pb-11 logo h-full w-full"><img src="../images/Bugatti_logo.png" class="h-full w-full"></div>
+                <div class="Company_name absolute bottom-0 bg-gray-700 bg-opacity-30 w-full py-1 px-2">
+                    <div class="main-title font-bold text-3xl text-gray-800 text-center">Bugatti</div>
+                </div>
+            </div>
+            <div class="card hover:scale-105 transition duration-200 rounded-sm">
+                <div class="pb-11 logo h-full w-full"><img src="../images/Lamborghini_Logo.png" class="h-full w-full"></div>
+                <div class="Company_name absolute bottom-0 bg-gray-700 bg-opacity-30 w-full py-1 px-2">
+                    <div class="main-title font-bold text-3xl text-gray-800 text-center">Lamborghini</div>
+                </div>
+            </div>
+            <div class="card hover:scale-105 transition duration-200 rounded-sm">
+                <div class="pb-11 logo h-full w-full"><img src="../images/Audi_logo.png" class="h-full w-full"></div>
+                <div class="Company_name absolute bottom-0 bg-gray-700 bg-opacity-30 w-full py-1 px-2">
+                    <div class="main-title font-bold text-3xl text-gray-800 text-center">Audi</div>
+                </div>
+            </div>
+            <div class="card hover:scale-105 transition duration-200 rounded-sm">
+                <div class="pb-11 logo h-full w-full"><img src="../images/VW_logo.png" class="h-full w-full"></div>
+                <div class="Company_name absolute bottom-0 bg-gray-700 bg-opacity-30 w-full py-1 px-2">
+                    <div class="main-title font-bold text-3xl text-gray-800 text-center">VW</div>
+                </div>
+            </div>
+            <div class="card hover:scale-105 transition duration-200 rounded-sm">
+                <div class="pb-11 logo h-full w-full"><img src="../images/fard_logo-removebg-preview_1.png" class="h-full w-full"></div>
+                <div class="Company_name absolute bottom-0 bg-gray-700 bg-opacity-30 w-full py-1 px-2">
+                    <div class="main-title font-bold text-3xl text-gray-800 text-center">Fard</div>
+                </div>
+            </div>
+            <div class="card hover:scale-105 transition duration-200 rounded-sm">
+                <div class="pb-11 logo h-full w-full"><img src="../images/Toyota-logo-removebg-preview.png" class="h-full w-full"></div>
+                <div class="Company_name absolute bottom-0 bg-gray-700 bg-opacity-30 w-full py-1 px-2">
+                    <div class="main-title font-bold text-3xl text-gray-800 text-center">Toyota</div>
+                </div>
+            </div>
+            <div class="card hover:scale-105 transition duration-200 rounded-sm">
+                <div class="pb-11 logo h-full w-full"><img src="../images/Kia-logo.png" class="h-full w-full"></div>
+                <div class="Company_name absolute bottom-0 bg-gray-700 bg-opacity-30 w-full py-1 px-2">
+                    <div class="main-title font-bold text-3xl text-gray-800 text-center">Kia</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
